# ConcurrencyTheoryNSU

Task1_Sin/: CMakeLists.txt  README.md  main.cpp  makefile
task2/2.1/: CMakeLists.txt  main.cpp
task2/2_1/: main.cpp
task2/2_2/: CMakeLists.txt  main.cpp
task2/2_3/: CMakeLists.txt  one_section.cpp  section_for_each.cpp
task3/task3.1/: main.cpp
task3/task3.2/: CMakeLists.txt
task4PythonThread/: main.py
task4PythonThread/logs/: log.txt
task5Process/: main.py  report.txt
